# sandbox-rp2040

./: Cargo.toml  readme.md  rust-toolchain.toml
.cargo/: config.toml
demo/: Cargo.toml
demo/src/: main.rs
i2c-controller/: Cargo.toml
i2c-controller/src/: main.rs
i2c-peripheral/: Cargo.toml
i2c-peripheral/src/: main.rs
src/: main.rs
test-itertools/: Cargo.toml
test-itertools/src/: lib.rs
test-pio-proc/: Cargo.toml
test-pio-proc/src/: lib.rs
