[package]
edition = "2021"
name = "rp2040-project-template"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }


# We're using a Pico by default on this template
rp-pico = "0.5"
test-itertools = { path = "../test-itertools" }
test-pio-proc = { path = "../test-pio-proc" }

