[package]
edition = "2021"
name = "i2c-controller"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
rtic = { workspace = true }
rtic-monotonics = { workspace = true }
embedded-hal = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }

rp-pico = { workspace = true }
rp2040-hal = { workspace = true, features = ["rtic-monotonic"] }

fugit = { workspace = true }
