[package]
edition = "2021"
name = "i2c-peripheral"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m-rtic = { workspace = true }
embedded-hal = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }

rp-pico = { workspace = true }

[features]
slow = []
