[package]
name = "test-itertools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.3", default-features = false }
defmt = "0.3"
arrayvec = { version =  "0.7.2", default-features = false }
